k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-graph-agent
  namespace: bdc-assist-dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/cors-allow-headers: Content-Type
    nginx.ingress.kubernetes.io/cors-allow-methods: POST, GET, OPTIONS
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: dug-agent.apps.renci.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-graph-agent
                port:
                  number: 8080
  tls:
    - hosts:
        - dug-agent.apps.renci.org
      secretName: dug-agent.apps.renci.org-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-mcp-server
  namespace: bdc-assist-dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/cors-allow-headers: Content-Type
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, POST, OPTIONS
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: dug-mcp.apps.renci.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-mcp-server
                port:
                  number: 8000
  tls:
    - hosts:
        - dug-mcp.apps.renci.org
      secretName: dug-mcp.apps.renci.org-tls
